# Dice

./: .gitignore  CMakeLists.txt  Entwicklerdokumentation.docx  How to implement a Dice in c on a Raspberry Pi Pico.docx  README.md  dice.c  dice_animation.c  dice_animation.h  dice_hardware.c  dice_hardware.h
